# FreeImage

./: .gitignore  README.md
FreeImage/: FreeImage.pro  FreeImageLibCreator.cpp
FreeImage/trunk/: Makefile.android
FreeImage/trunk/Source/LibJXR/image/decode/: segdec.c
FreeImage/trunk/Source/LibJXR/image/encode/: strenc.c
FreeImage/trunk/Source/LibJXR/jxrgluelib/: JXRGlueJxr.c
FreeImage/trunk/Source/LibRawLite/src/decoders/: fp_dng.cpp  unpack_thumb.cpp
FreeImage/trunk/Source/OpenEXR/Imath/: ImathMatrix.h
FreeImage/trunk/Source/ZLib/: gzlib.c  gzread.c  gzwrite.c
QtFreeImage/: CMakeLists.txt  QtFreeImage.pro  QtFreeImageConfig.pri
QtFreeImage/Examples/: CMakeLists.txt  Examples.pro
QtFreeImage/Examples/QMLFreeImage/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QMLFreeImage.pro  main.cpp  main.qml
QtFreeImage/Examples/QMLFreeImage/android/: build.gradle
QtFreeImage/FreeImage/: CMakeLists.txt  FreeImage.pro
QtFreeImage/FreeImageToolkit/: CMakeLists.txt  FreeImageToolkit.pro
QtFreeImage/LibJXR/: CMakeLists.txt  LibJXR.pro
QtFreeImage/LibJpeg/: CMakeLists.txt  LibJpeg.pro
QtFreeImage/LibOpenJPEG/: CMakeLists.txt  LibOpenJPEG.pro
QtFreeImage/LibPNG/: CMakeLists.txt  LibPNG.pro
QtFreeImage/LibRawLite/: CMakeLists.txt  LibRawLite.pro
QtFreeImage/LibTIFF4/: CMakeLists.txt  LibTIFF4.pro
QtFreeImage/LibWebP/: CMakeLists.txt  LibWebP.pro
QtFreeImage/MetaData/: CMakeLists.txt  MetaData.pro
QtFreeImage/OpenEXR/: CMakeLists.txt  OpenEXR.pro
QtFreeImage/ZLib/: CMakeLists.txt  ZLib.pro
