cmake_minimum_required(VERSION 3.16)
project(QtFreeImage VERSION 1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(LibPNG)
add_subdirectory(Examples)
add_subdirectory(LibRawLite)
add_subdirectory(FreeImage)
add_subdirectory(FreeImageToolkit)
add_subdirectory(MetaData)
add_subdirectory(LibJpeg)
add_subdirectory(LibJXR)
add_subdirectory(LibTIFF4)
add_subdirectory(ZLib)
add_subdirectory(LibOpenJPEG)
add_subdirectory(LibWebP)
add_subdirectory(OpenEXR)
